--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>HENRY KIBOCHA MUGO</h1>
 
     <br>
-    <img src="/images/Me.jpeg" alt="Henry's Pic">
+    <img src="./images/Me.jpeg" alt="Henry's Pic">
     <h2>Summary:</h2>
     <p>I am a customer happiness and technical support professional with over 4 years of experience. I have provided
         support to clients via zoom and google meet calls and through email and chat channels. I have also created user
@@ -59,8 +59,8 @@
     </ul>
     <hr>
 
-    <a href="/experience.html">Professional Experience</a><br>
-    <a href="/contacts.html">Contacts</a>
+    <a href="./experience.html">Professional Experience</a><br>
+    <a href="./contacts.html">Contacts</a>
 
     <footer>
         <h4>Created by Henry Mugo &copy;. All rights reserved.</h4>
